# bcci-tv

./: AGENTS.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  smithery.yaml
src/bcci_tv/: __init__.py  server.py
src/bcci_tv/api/: client.py  utils.py
src/bcci_tv/mcp/: server.py
src/bcci_tv_mcp/: server.py
src/bcci_tv_mcp/api/: client.py  utils.py
src/bcci_tv_mcp/mcp/: server.py
tests/: conftest.py
tests/api/: test_client.py  test_utils.py
tests/fixtures/: competitions.js  filtered_standings.json  intl_schedule.js  live_tournaments.json  live_tournaments_summary.json  match_innings1.js  match_summary.js  search_cooch_results.json  simplified_standings.json  standings.js  tournament_details_326.json
tests/mcp/: test_tools.py
