[project]
name = "bcci-tv-mcp"
version = "0.1.0"
description = "BCCI.tv MCP server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.14.1",
]

[project.scripts]
bcci-tv-mcp = "bcci_tv_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
