[project]
name = "bcci-tv"
version = "0.1.0"
description = "BCCI.tv MCP server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bcci-tv-mcp = "bcci_tv.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bcci_tv"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
